--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -7,14 +7,12 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
-      crossorigin="anonymous"
-    />
+      crossorigin="anonymous" />
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
       crossorigin="anonymous"
-      defer
-    ></script>
+      defer></script>
     <script src="./script.js" defer></script>
     <script src="./testes/testes.js" defer></script>
 
@@ -51,16 +49,14 @@
                 data-bs-toggle="collapse"
                 data-bs-target="#collapseOne"
                 aria-expanded="true"
-                aria-controls="collapseOne"
-              >
+                aria-controls="collapseOne">
                 Teste 1
               </button>
             </h2>
             <div
               id="collapseOne"
               class="accordion-collapse collapse show"
-              data-bs-parent="#accordion-1"
-            >
+              data-bs-parent="#accordion-1">
               <div class="accordion-body">
                 Para executar a bateria de testes, clique no botão
                 <strong>Executar Bateria de Testes</strong>. Caso queira
@@ -81,16 +77,14 @@
                 data-bs-toggle="collapse"
                 data-bs-target="#collapseTwo"
                 aria-expanded="false"
-                aria-controls="collapseTwo"
-              >
+                aria-controls="collapseTwo">
                 Teste 2
               </button>
             </h2>
             <div
               id="collapseTwo"
               class="accordion-collapse collapse"
-              data-bs-parent="#accordion-1"
-            >
+              data-bs-parent="#accordion-1">
               <div class="accordion-body"></div>
             </div>
           </div>
@@ -107,16 +101,14 @@
                 data-bs-toggle="collapse"
                 data-bs-target="#collapseThree"
                 aria-expanded="false"
-                aria-controls="collapseThree"
-              >
+                aria-controls="collapseThree">
                 Teste 3
               </button>
             </h2>
             <div
               id="collapseThree"
               class="accordion-collapse collapse"
-              data-bs-parent="#accordion-1"
-            >
+              data-bs-parent="#accordion-1">
               <div class="accordion-body"></div>
             </div>
           </div>
@@ -133,16 +125,14 @@
                 data-bs-toggle="collapse"
                 data-bs-target="#collapseFour"
                 aria-expanded="false"
-                aria-controls="collapseFour"
-              >
+                aria-controls="collapseFour">
                 Teste 4
               </button>
             </h2>
             <div
               id="collapseFour"
               class="accordion-collapse collapse"
-              data-bs-parent="#accordion-1"
-            >
+              data-bs-parent="#accordion-1">
               <div class="accordion-body"></div>
             </div>
           </div>
@@ -159,16 +149,14 @@
                 data-bs-toggle="collapse"
                 data-bs-target="#collapseFive"
                 aria-expanded="false"
-                aria-controls="collapseFive"
-              >
+                aria-controls="collapseFive">
                 Teste 5
               </button>
             </h2>
             <div
               id="collapseFive"
               class="accordion-collapse collapse"
-              data-bs-parent="#accordion-1"
-            >
+              data-bs-parent="#accordion-1">
               <div class="accordion-body"></div>
             </div>
           </div>
@@ -185,16 +173,14 @@
                 data-bs-toggle="collapse"
                 data-bs-target="#collapseSix"
                 aria-expanded="false"
-                aria-controls="collapseSix"
-              >
+                aria-controls="collapseSix">
                 Teste 6
               </button>
             </h2>
             <div
               id="collapseSix"
               class="accordion-collapse collapse"
-              data-bs-parent="#accordion-1"
-            >
+              data-bs-parent="#accordion-1">
               <div class="accordion-body"></div>
             </div>
           </div>
@@ -211,16 +197,14 @@
                 data-bs-toggle="collapse"
                 data-bs-target="#collapseSeven"
                 aria-expanded="false"
-                aria-controls="collapseSeven"
-              >
+                aria-controls="collapseSeven">
                 Teste 7
               </button>
             </h2>
             <div
               id="collapseSeven"
               class="accordion-collapse collapse"
-              data-bs-parent="#accordion-1"
-            >
+              data-bs-parent="#accordion-1">
               <div class="accordion-body"></div>
             </div>
           </div>
@@ -237,16 +221,14 @@
                 data-bs-toggle="collapse"
                 data-bs-target="#collapseEight"
                 aria-expanded="false"
-                aria-controls="collapseEight"
-              >
+                aria-controls="collapseEight">
                 Teste 8
               </button>
             </h2>
             <div
               id="collapseEight"
               class="accordion-collapse collapse"
-              data-bs-parent="#accordion-1"
-            >
+              data-bs-parent="#accordion-1">
               <div class="accordion-body"></div>
             </div>
           </div>
@@ -263,16 +245,14 @@
                 data-bs-toggle="collapse"
                 data-bs-target="#collapseNine"
                 aria-expanded="false"
-                aria-controls="collapseNine"
-              >
+                aria-controls="collapseNine">
                 Teste 9
               </button>
             </h2>
             <div
               id="collapseNine"
               class="accordion-collapse collapse"
-              data-bs-parent="#accordion-1"
-            >
+              data-bs-parent="#accordion-1">
               <div class="accordion-body"></div>
             </div>
           </div>
